--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
 ==============================
 <!-- SECTION 1 -->
-    
 
+<!-- TODO check this out!! -->
+
+TODO
+check this out!!
 
 <script src="index.js"></script>
 </body>
